fixed overlapping skill text

--- a/css/style.css
+++ b/css/style.css
@@ -404,14 +404,17 @@ footer a {
 		margin-left: 30px;
 	}
 
-	i {
-		font-size: 60px;
-		letter-spacing: 0.5em;
-		margin-left: auto;
-		margin-right: auto;
+	.skill {
+		margin: 6%;
 	}
 
+	.long {
+		margin: -12px;
+	}
 
+	.medium {
+		margin: -6px;
+	}
 
 }
 
@@ -466,7 +469,20 @@ footer a {
 	}
 
 	.skill-holder {
-		margin-left: 30px;
+		margin-left: 1%;
+		margin-right: 2%;
+	}
+
+	span {
+		font-size: 0.7em;
+	}
+
+	.long {
+		margin-left: -15px;
+	}
+
+	.medium {
+		margin-left: -6px;
 	}
 
 	.contact {
